# archive_heatmaps

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  antimeridian.py  connect_db.py  create_sql.py  heatmap-client-1e01006d7fc3aecb.js  heatmap-client-3117f6feea9747bb.js  heatmap-client-3afbe6375227c279.js  heatmap-client-49cf8aecb19b2415.js  heatmap-client-4f55c18aceb57f34.js  heatmap-client-5140bd5b50242e33.js  heatmap-client-6e32dc08efc8b5e3.js  heatmap-client-6e469d7e6976bfe.js  heatmap-client-7bdb3f82e5e11219.js  heatmap-client-8e875e94c3218775.js  heatmap-client-a40406e8f36da6b1.js  heatmap-client-c2e1dbf9e87485fc.js  heatmap-client-cc5388c0b7c9c71c.js  heatmap-client-d4017b87d4933632.js  heatmap-client-e50c60f07007ddc0.js  heatmap-client-f1dfb7f183123c14.js  heatmap.py  index.html  quad_poly.py  run-service-docker.sh  style-60f4c089d093df05.css  style-d23828c5e242bd31.css
.github/workflows/: gh-pages-deploy.yml  rust.yml
data-ingest/: .env.example  Dockerfile  README.md  antimeridian.py  create_sql.py  data_merger.py  heatmap.py  ingest.py  quad_tree.py
data-ingest/Docker/: Dockerfile  env.yml  run.sh
heatmap-api/: Cargo.toml  README.md
heatmap-api/src/: granule.rs  lib.rs
heatmap-client/: Cargo.toml  README.md  Trunk.toml  index.html  style.scss
heatmap-client/src/: main.rs
heatmap-client/src/canvas/: app.rs  camera.rs  canvas.module.scss  canvas.rs  geometry.rs  input.rs  mod.rs  pipeline.rs  png.rs  render_context.rs  state.rs  texture.rs
heatmap-client/src/canvas/shaders/: blend.wgsl  colormap.wgsl  export.wgsl  export_colormap.wgsl  max_weight.wgsl  outline.wgsl
heatmap-client/src/display/: app.rs  camera.rs  canvas.rs  geometry.rs  input.rs  mod.rs  render_context.rs  state.rs  texture.rs
heatmap-client/src/display/shaders/: blend.wgsl  color_ramp.wgsl  colormap.wgsl  shader.wgsl
heatmap-client/src/heatmap/: app.rs  canvas.rs  geometry.rs  mod.rs  render_context.rs  state.rs
heatmap-client/src/ingest/: load.rs  mod.rs  request.rs
heatmap-client/src/ui/: user_interface.module.scss  user_interface.rs
heatmap-client/style/: bundled.scss  canvas.scss  how_to_stylance.txt
heatmap-service/: .dockerignore  Cargo.toml  Dockerfile  README.md  run-service-docker.sh
heatmap-service/sql/: end_date.sql  fetch_dataset.sql  start_date.sql
heatmap-service/src/: assets.rs  config.rs  dataset.rs  error.rs  geo_assets.rs  geo_json_path.rs  granule.rs  heatmap_data.rs  heatmap_response.rs  main.rs  middleware.rs  outline_response.rs  query.rs  redis.rs
heatmap-service/src/database/: dataset.rs  date_range.rs  granule.rs  heatmap_data.rs  heatmap_response.rs  mod.rs
heatmap-service/src/tests/: add_granule.sql  mod.rs  testing_cleanup.sql  testing_init.sql
