[workspace]

members = [ 
  "heatmap-service",
  "heatmap-client", "heatmap-api",
]

[workspace.dependencies]
leptos = { version = "0.6.12", features = ["csr", "nightly"] }
serde = {version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
chrono = "0.4.38"
log = "0.4.22"
geo = "0.28.0"
base64 = "0.22.1"
bincode = "2.0.1"






resolver = "2"
