[package]
name = "heatmap-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.2.1"
actix-web = "4.1.0"
approx = "0.5.1"
base64 = "0.13.0"
chrono = { version = "0.4.24", features = ["serde"] }
config = "0.13.2"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
deadpool-redis = { version = "0.10.2", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures-util = "0.3.28"
geo-types = { version = "0.7.9", features = ["serde"] }
pin-project = "1.0.12"
redis = { version = "0.21.5", features = ["tokio-comp"] }
serde = "1.0.163"
serde_json = "1.0.83"
serde_with = "2.0.0"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = { version = "0.7.8", features = ["with-geo-types-0_7", "with-chrono-0_4"] }
